[package]

name = "zeromq"
version = "0.2.0-pre"
authors = ["Fantix King <fantix.king@gmail.com>"]

description = "native stack of ØMQ in Rust"
license = "MPL-2.0"

[dependencies]
libc = "0.1.10"

[dependencies.mio]
git = "https://github.com/carllerche/mio/"

[dependencies.coio]
git = "https://github.com/zonyitoo/coio-rs.git"

